# ai_chat_md

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/config/: builder.rs  cli.rs  constants.rs  error.rs  mod.rs  model.rs  paths.rs  types.rs
src/parser/: error.rs  mod.rs  participant.rs  timestamp.rs  types.rs
src/parser/markdown/: chatgpt.rs  claude.rs  deepseek.rs  mod.rs
src/parser/model/: chatgpt.rs  claude.rs  deepseek.rs  mod.rs
