[package]
name = "ai_chat_md"
version = "1.0.0"
authors = ["Stephen Lee"]
description = "Parse AI chat messages in JSON format and save as Markdown"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
thiserror = "1.0.65"
serde_json = "1.0"
config = "0.14.1"
dotenv = "0.15.0"
chrono = "0.4"
chrono-tz = "0.10.0"
indicatif = "0.17.8"

[build-dependencies]
chrono = "0.4"
